First commit to merge thuing

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -1,76 +1,624 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+@tailwind components;
+@tailwind utilities;
 
-  @layer base {
-    :root {
-      --background: 0 0% 100%;
-      --foreground: 222.2 84% 4.9%;
+* {
+  padding: 0;
+  margin: 0;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
+}
+body {
+  background: #000;
+  height: 100vh;
+}
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(transparent, gray);
+  border-radius: 6px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(transparent, #0fa3e2);
+  border-radius: 6px;
+}
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 95%;
+  margin: auto;
+  margin-top: 10px;
+}
+.unibot {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  gap: 12px;
+}
+.unibot p {
+  font-size: 32px;
+  font-weight: 700;
+}
+.unibot .icon {
+  font-size: 5px;
+}
 
-      --card: 0 0% 100%;
-      --card-foreground: 222.2 84% 4.9%;
+.ulbutt {
+  display: flex;
+  align-items: center;
+}
+nav div ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  margin-right: 45px;
+}
+nav div ul li {
+  margin: 30px 25px;
+}
+a {
+  text-decoration: none;
+}
+nav ul li a:hover,
+.home {
+  color: rgb(56, 134, 165);
+}
+nav div ul li a,
+.signup,
+.signup a {
+  font-size: 18px;
+  font-weight: 500;
+  color: #fff;
+}
 
-      --popover: 0 0% 100%;
-      --popover-foreground: 222.2 84% 4.9%;
+button {
+  height: 45px;
+  width: 117px;
+  border-radius: 16px;
+  background: linear-gradient(96.08deg, #7e7c81 35.18%, #5555c1 84.59%);
 
-      --primary: 222.2 47.4% 11.2%;
-      --primary-foreground: 210 40% 98%;
+  font-size: 18px;
+  font-weight: 500;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+.signup {
+  background: linear-gradient(96.08deg, #7e7c81 35.18%, #040405 84.59%);
+}
+.signup:hover {
+  background: linear-gradient(96.08deg, #040405 35.18%, #0fa3e2 84.59%);
+}
+button:hover {
+  /* */
+  font-size: larger;
+}
+.getstarted:hover {
+  height: 48px;
+  width: 120px;
+  box-shadow: 0 0 50px rgb(49, 171, 180);
+}
+.container1 {
+  width: 992px;
+  height: 417px;
+  margin-top: 80px;
+  margin-left: 138px;
+  background: linear-gradient(50deg, #0fa3e2, black 70%);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 18px;
+  color: #fff;
+  position: relative;
+}
+.container1 h2 {
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 48.76px;
+  text-align: left;
+  margin-bottom: 40px;
+}
+.container1 p {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24.38px;
+  text-align: left;
+  margin-bottom: 20px;
+}
+.getstarted {
+  position: absolute;
+  bottom: 40px;
+  left: 40px;
+  color: #fff;
+  margin-top: 10px;
+}
+.getstarted a {
+  color: #fff;
+}
+.container2 {
+  width: 691px;
+  height: 221px;
+  margin-top: 60px;
+  margin-left: 284px;
+  color: #fff;
+  text-align: center;
+}
+.container2 h2 {
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 43.88px;
+  margin-top: 20px;
+}
+.container2 p {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19.5px;
+  margin-top: 30px;
+}
+.container2 a,
+.container3 a {
+  /*container2*/
 
-      --secondary: 210 40% 96.1%;
-      --secondary-foreground: 222.2 47.4% 11.2%;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16.42px;
+  color: rgb(56, 134, 165);
+  transition: o.5s;
+}
+.container2 a:hover,
+.container3 a:hover {
+  /*container2*/
+  font-size: 20px;
+  color: rgb(102, 103, 104);
+  border-top: #0fa3e2 2px solid;
+  border-left: #0fa3e2 2px solid;
+  padding-left: 5px;
+}
+.container3 {
+  width: 992px;
+  height: 461px;
+  margin-top: 60px;
+  margin-left: 136px;
+  background: rgba(231, 240, 255, 1);
 
-      --muted: 210 40% 96.1%;
-      --muted-foreground: 215.4 16.3% 46.9%;
+  display: flex;
+  justify-content: center;
 
-      --accent: 210 40% 96.1%;
-      --accent-foreground: 222.2 47.4% 11.2%;
+  align-items: center;
+  border-radius: 18px;
+}
+#content {
+  width: 706px;
+  margin-right: 10px;
 
-      --destructive: 0 84.2% 60.2%;
-      --destructive-foreground: 210 40% 98%;
+  padding: 60px 15px;
+}
+.container3 h2 {
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 48.76px;
+  text-align: left;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+.container3 p {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19.5px;
+  text-align: left;
+  margin-bottom: 20px;
+}
+#read-more-btn {
+  background: linear-gradient(96.08deg, #8743ff 35.18%, #3a36f1 84.59%);
+}
+#read-more-btn:hover {
+  box-shadow: 0 0 15px rgb(131, 134, 134);
+  cursor: pointer;
+}
+#container3img {
+  transition: 0.5s;
+}
+#container3img:hover {
+  clip-path: circle(40%);
+  margin-bottom: 30px;
+  box-shadow: 0 0 50px #0ef;
+}
 
-      --border: 214.3 31.8% 91.4%;
-      --input: 214.3 31.8% 91.4%;
-      --ring: 222.2 84% 4.9%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: system-ui;
+}
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #000;
+  position: relative;
+}
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(transparent, gray);
+  border-radius: 6px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(transparent, #0fa3e2);
+  border-radius: 6px;
+}
 
-      --radius: 0.5rem;
-    }
+.unibot {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+  gap: 12px;
 
-    .dark {
-      --background: 222.2 84% 4.9%;
-      --foreground: 210 40% 98%;
+  position: absolute;
+  top: 20px;
+  left: 35px;
+  text-decoration: none;
+}
+.unibot p {
+  font-size: 32px;
+  font-weight: 700;
+}
+.unibot .icon {
+  font-size: 5px;
+}
+.wrapper {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 60%;
+  height: 500px;
+  background: #000;
+  box-shadow: 0 0 50px gray; /*50 #0ef*/
+  border-radius: 20px;
 
-      --card: 222.2 84% 4.9%;
-      --card-foreground: 210 40% 98%;
+  padding: 40px;
+  overflow: hidden;
+}
 
-      --popover: 222.2 84% 4.9%;
-      --popover-foreground: 210 40% 98%;
+.form-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%; /*width:40%*/
+  height: 100%;
+  transition: 1s ease-in-out;
+}
 
-      --primary: 210 40% 98%;
-      --primary-foreground: 222.2 47.4% 11.2%;
+h2 {
+  font-size: 30px;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 35px;
+}
+.input-group {
+  position: relative;
+  margin: 30px 0;
+  border-bottom: 2px solid #fff;
+  width: 100%;
+}
+.sign-in.input-group {
+  position: relative;
+  margin: 30px 0;
+  border-bottom: 2px solid #fff;
+  width: 100%;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+.input-group1 {
+  position: relative;
+  width: 40%;
+  border-bottom: 2px solid #fff;
+}
+.input-group2 {
+  position: relative;
+  width: 40%;
+  border-bottom: 2px solid #fff;
+}
+.input-group label,
+.input-group1 label,
+.input-group2 label {
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  font-size: 16px;
+  color: white;
+  pointer-events: none;
+  transition: 0.5s;
+}
 
-      --secondary: 217.2 32.6% 17.5%;
-      --secondary-foreground: 210 40% 98%;
+.input-group input,
+.input-group1 input,
+.input-group2 input {
+  width: 100%;
+  height: 40px;
+  font-size: 16px;
+  color: #fff;
+  padding: 0 5px;
+  background: transparent;
+  border: none;
+  outline: none;
+}
+.input-group input:focus ~ label,
+.input-group input:valid ~ label {
+  top: -5px;
+}
+.input-group1 input:focus ~ label,
+.input-group1 input:valid ~ label {
+  top: -5px;
+}
+.input-group2 input:focus ~ label,
+.input-group2 input:valid ~ label {
+  top: -5px;
+}
+button {
+  position: relative;
+  width: 40%;
+  height: 40px;
+  background: #0ef;
+  box-shadow: 0 0 10px #0ef;
+  font-size: 16px;
+  color: #000;
+  font-weight: 500;
+  cursor: pointer;
+  border-radius: 30px;
+  border: none;
+  outline: none;
+  left: 30%;
+  transition: 0.5s;
+}
+button:hover {
+  background-color: gray;
+  color: white;
+}
+.signIn-link {
+  font-size: 14px;
+  text-align: center;
+  margin: 15px 0;
+}
+.signUp-link {
+  font-size: 14px;
+  text-align: center;
+  margin: 15px 0;
+}
 
-      --muted: 217.2 32.6% 17.5%;
-      --muted-foreground: 215 20.2% 65.1%;
+.signIn-link p {
+  color: #fff;
+}
+.signIn-link p a {
+  color: #0ef;
+  text-decoration: none;
+  font-weight: 500;
+}
+.signIn-link p a:hover {
+  text-decoration: underline;
+}
+.signUp-link p {
+  color: #fff;
+}
+.signUp-link p a {
+  color: #0ef;
+  text-decoration: none;
+  font-weight: 500;
+}
+.signUp-link p a:hover {
+  text-decoration: underline;
+}
+.wrapper.active .form-wrapper.sign-up {
+  transform: translateY(-450px);
+}
+.wrapper .form-wrapper.sign-in {
+  position: absolute;
+  top: 450px;
+  left: 0;
+}
+.wrapper.active .form-wrapper.sign-in {
+  transform: translateY(-450px);
+}
+.form-wrapper.sign-in {
+  margin-left: 15px;
+}
 
-      --accent: 217.2 32.6% 17.5%;
-      --accent-foreground: 210 40% 98%;
+.light {
+  animation: animate 0.5s linear;
+}
+@keyframes animate {
+  100% {
+    filter: hue-rotate(360deg);
+  }
+}
 
-      --destructive: 0 62.8% 30.6%;
-      --destructive-foreground: 210 40% 98%;
+.container4 {
+  width: 776px;
+  height: 774px;
+  top: 1385px;
+  margin-left: 237px;
+  color: #fff;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 80px;
+}
+.conversation {
+  height: 60%;
+  width: 90%;
+  overflow: hidden;
+}
+.conversation img {
+  width: 100%;
+  height: 100%;
+  border-radius: 30px;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+}
 
-      --border: 217.2 32.6% 17.5%;
-      --input: 217.2 32.6% 17.5%;
-      --ring: 212.7 26.8% 83.9%;
-    }
+.container4 a {
+  color: #0fa3e2;
+}
+.container4 h2 {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 39.01px;
+  text-transform: uppercase;
+  margin: 40px 0px;
+}
+.container4 p {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 30px;
+}
+.container5 {
+  width: 997px;
+  height: 151px;
+  margin: auto;
+  background: linear-gradient(120deg, #ceced2 32.71%, #1f77b5 103.08%);
+  display: flex;
+  align-items: center;
+  border-radius: 18px;
+  justify-content: space-between;
+}
+.container5 .text {
+  margin-left: 20px;
+}
+
+.gmail {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 70px;
+  font-weight: 500;
+}
+.profileimg {
+  height: 100px;
+  width: 100px;
+}
+.profileimg img {
+  width: 100%;
+}
+.text h2 {
+  margin-bottom: 15px;
+
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 43.88px;
+}
+.text p {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19.5px;
+}
+.thank {
+  width: 887px;
+  height: 52px;
+
+  border-top: 2px solid skyblue;
+
+  text-align: center;
+
+  padding-top: 30px;
+  margin: 100px auto;
+  position: relative;
+}
+.thank p {
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 500;
+  color: #fff;
+  letter-spacing: 1px;
+}
+
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+
+    --radius: 0.5rem;
   }
 
-  @layer base {
-    * {
-      @apply border-border;
-    }
-    body {
-      @apply bg-background text-foreground;
-    }
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
   }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
